--- a/ui/public/admin/index.html
+++ b/ui/public/admin/index.html
@@ -8,9 +8,9 @@
 <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet" href="/style.css">
-<script src="/push/client.js"></script>
 </head>
 <body>
+  <div id="root"></div>
   <script src="/admin/bundle.js"></script>
 </body>
 </head>
