admin ui: move to instui (no more bootstrap)
Change-Id: Ia6067fd657cc43ac43deb1306658152fa1e8c2c4

--- a/ui/public/admin/index.html
+++ b/ui/public/admin/index.html
@@ -1,14 +1,11 @@
-<html>
+<!doctype html>
+<html dir="ltr">
+
 <head>
-<title>Pandapush</title>
-<script src="/vendor/jquery-2.1.1.min.js"></script>
-
-<link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.min.css">
-<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" href="/style.css">
+  <title>Pandapush</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
   <div id="root"></div>
   <script src="/admin/bundle.js"></script>
